--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy_rapier3d = { version = "0.30.0", features = ["simd-stable"] }
+bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
 bevy = "0.16"
 bevy-inspector-egui = "0.31.0"
+iyes_perf_ui = "0.5.0"
