--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,20 +13,31 @@ iyes_perf_ui = "0.5.0"
 [features]
 default = ["dev_native"]
 dev = [
-    # Improve compile times for dev builds by linking Bevy as a dynamic library.
-    "bevy/dynamic_linking",
-    "bevy/bevy_dev_tools",
-    "bevy/bevy_ui_debug",
-    # Improve error messages coming from Bevy
-    "bevy/track_location",
+	# Improve compile times for dev builds by linking Bevy as a dynamic library.
+	"bevy/dynamic_linking",
+	"bevy/bevy_dev_tools",
+	"bevy/bevy_ui_debug",
+	# Improve error messages coming from Bevy
+	"bevy/track_location",
 ]
 dev_native = [
-    "dev",
-    # Enable asset hot reloading for native dev builds.
-    "bevy/file_watcher",
-    # Enable embedded asset hot reloading for native dev builds.
-    "bevy/embedded_watcher",
+	"dev",
+	# Enable asset hot reloading for native dev builds.
+	"bevy/file_watcher",
+	# Enable embedded asset hot reloading for native dev builds.
+	"bevy/embedded_watcher",
 ]
+
+[lints.clippy]
+# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
+# request more than 7 arguments, which would undesirably trigger this lint.
+too_many_arguments = "allow"
+# Queries may access many components, which would undesirably trigger this lint.
+type_complexity = "allow"
+# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
+nonstandard_macro_braces = "warn"
+# That's dumb
+needless_return = "allow"
 
 [package.metadata.bevy_cli.release]
 # Disable dev features for release builds.
