--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,7 @@ env:
     build_for_macos: false
 
     # Whether to upload the packages produced by this workflow to a GitHub release.
-    upload_to_github: true
+    upload_to_github: false
 
     # The itch.io project to upload to in the format `user-name/project-name`.
     # There will be no upload to itch.io if this is commented out.
