--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ env:
 
     # Whether to build and package a release for a given target platform.
     build_for_web: true
-    build_for_linux: true
+    build_for_linux: false
     build_for_windows: true
     build_for_macos: false
 
@@ -46,21 +46,21 @@ env:
     # The ID of the app produced by this workflow.
     # Applies to macOS releases.
     # Must contain only A-Z, a-z, 0-9, hyphen, and period: <https://developer.apple.com/documentation/bundleresources/information_property_list/cfbundleidentifier>.
-    app_id: amatsugu.bevy-new-2d
+    app_id: amatsugu.bevy-jam-6
 
     # The base filename of the binary in the package produced by this workflow.
     # Applies to Windows, macOS, and Linux releases.
     # Defaults to `cargo_build_binary_name` if commented out.
-    #app_binary_name: bevy_new_2d
+    #app_binary_name: bevy_jam_6
 
     # The name of the `.zip` or `.dmg` file produced by this workflow.
     # Defaults to `app_binary_name` if commented out.
-    app_package_name: bevy-new-2d
+    #app_package_name: bevy-new-2d
 
     # The display name of the app produced by this workflow.
     # Applies to macOS releases.
     # Defaults to `app_package_name` if commented out.
-    app_display_name: Bevy New 2D
+    app_display_name: Bevy Jam 6
 
     # The short display name of the app produced by this workflow.
     # Applies to macOS releases.
