--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -205,11 +205,13 @@ jobs:
               run: cargo binstall --locked --no-confirm --force --git='https://github.com/TheBevyFlock/bevy_cli' bevy_cli
 
             - name: Build and add web bundle to app (Web)
+              env:
+                  RUSTFLAGS: -Zshare-generics=y -Zthreads=0--cfg getrandom_backend="wasm_js"
               if: ${{ env.is_platform_enabled == 'true' && matrix.platform == 'web' }}
               run: |
                   cargo binstall --locked --no-confirm --force wasm-bindgen-cli
                   cargo binstall --locked --no-confirm --force wasm-opt
-                  bevy build --locked --release --features='${{ matrix.features }}' --yes web --bundle
+                  bevy build --locked --release --features='${{ matrix.features }} web' --yes web --bundle
                   mv 'target/bevy_web/web-release/${{ env.cargo_build_binary_name }}' '${{ env.app }}'
 
             - name: Build and add binaries to app (non-Web)
