--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2024"
 license = "MIT"
 
 [dependencies]
-bevy_rapier2d = { version = "0.30.0", features = ["simd-stable", "parallel"] }
+bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
 bevy = "0.16"
 bevy-inspector-egui = "0.31.0"
 iyes_perf_ui = "0.5.0"
 rand = "0.9.1"
 rand_chacha = "0.9.0"
+getrandom = { version = "0.3.3" }
 
 [features]
 default = ["dev_native"]
@@ -33,6 +34,7 @@ dev_native = [
 phys = ["dev"]
 ai = ["dev"]
 inspect = []
+web = ["getrandom/wasm_js"]
 
 [lints.clippy]
 # Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
