--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ concurrency:
 
 env:
     # Reduce compile time and cache size.
-    RUSTFLAGS: -Zshare-generics=y -Zthreads=0 --cfg getrandom_backend="wasm_js"
+    RUSTFLAGS: -Zshare-generics=y -Zthreads=0
     RUSTDOCFLAGS: -Zshare-generics=y -Zthreads=0
     # Use the same Rust toolchain across jobs so they can share a cache.
     toolchain: nightly-2025-04-03
@@ -112,6 +112,8 @@ jobs:
     check-web:
         name: Check web
         runs-on: ubuntu-latest
+        env:
+            RUSTFLAGS: -Zshare-generics=y -Zthreads=0 --cfg getrandom_backend="wasm_js"
         timeout-minutes: 20
         steps:
             - name: Checkout repository
