--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT"
 
 [dependencies]
 bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
-bevy = "0.16"
+bevy = {version = "0.16", features = ["wav"]}
 bevy-inspector-egui = "0.31.0"
 iyes_perf_ui = "0.5.0"
 rand = "0.9.1"
