--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ concurrency:
 # Configure the release workflow by editing the following values.
 env:
     # The base filename of the binary produced by `cargo build`.
-    cargo_build_binary_name: bevy-jam-6
+    cargo_build_binary_name: cataclyze
 
     # The path to the assets directory.
     assets_path: assets
@@ -46,7 +46,7 @@ env:
     # The ID of the app produced by this workflow.
     # Applies to macOS releases.
     # Must contain only A-Z, a-z, 0-9, hyphen, and period: <https://developer.apple.com/documentation/bundleresources/information_property_list/cfbundleidentifier>.
-    app_id: amatsugu.bevy-jam-6
+    app_id: amatsugu.cataclyze
 
     # The base filename of the binary in the package produced by this workflow.
     # Applies to Windows, macOS, and Linux releases.
@@ -60,7 +60,7 @@ env:
     # The display name of the app produced by this workflow.
     # Applies to macOS releases.
     # Defaults to `app_package_name` if commented out.
-    app_display_name: Bevy Jam 6
+    app_display_name: Cataclyze
 
     # The short display name of the app produced by this workflow.
     # Applies to macOS releases.
