--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ license = "MIT"
 [dependencies]
 bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
 bevy = {version = "0.16", features = ["wav"]}
-bevy-inspector-egui = "0.31.0"
-iyes_perf_ui = "0.5.0"
+bevy-inspector-egui = {version = "0.31.0", optional = true}
+iyes_perf_ui = { version = "0.5.0", optional = true}
 rand = "0.9.1"
 rand_chacha = "0.9.0"
 getrandom = { version = "0.3.3" }
@@ -33,7 +33,7 @@ dev_native = [
 ]
 phys = ["dev"]
 ai = ["dev"]
-inspect = []
+inspect = ["dep:iyes_perf_ui", "dep:bevy-inspector-egui"]
 web = ["getrandom/wasm_js"]
 
 [lints.clippy]
